--- a/difftest/Difftest Results.ipynb
+++ b/difftest/Difftest Results.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -20,7 +20,7 @@
        "'mysql://cc1:3306/project_b'"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -418,7 +418,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -827,24 +827,24 @@
        "37                  24.0h  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "MIN_TIME = 24 * 3600\n",
+    "TIME_LIMIT = 24 * 3600\n",
     "\n",
     "schedule = []\n",
     "for _, row in overview_table.iterrows():\n",
     "    for source in [\"CLSmith\", \"CLgen\"]:\n",
-    "        if row[f\"{source} time\"] < MIN_TIME:\n",
+    "        if row[f\"{source} time\"] < TIME_LIMIT:\n",
     "            d = OrderedDict()\n",
     "            d[\"Device\"] = row[\"Device\"]\n",
     "            d[\"±\"] = row[\"±\"]\n",
     "            d[\"Job\"] = source\n",
-    "            d[\"Remaining time\"] = (MIN_TIME - row[f\"{source} time\"])\n",
-    "            d[\"Remaining time (hours)\"] = \"{:.1f}h\".format((MIN_TIME - row[f\"{source} time\"]) / 3600)\n",
+    "            d[\"Remaining time\"] = (TIME_LIMIT - row[f\"{source} time\"])\n",
+    "            d[\"Remaining time (hours)\"] = \"{:.1f}h\".format((TIME_LIMIT - row[f\"{source} time\"]) / 3600)\n",
     "            schedule.append(d)\n",
     "    \n",
     "schedule = pd.DataFrame(schedule)\n",
@@ -980,7 +980,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -1193,7 +1193,7 @@
        "9    Ubuntu 16.04 64bit     Emulator      4 hours               0  "
       ]
      },
-     "execution_count": 19,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1207,7 +1207,9 @@
     "\n",
     "\n",
     "def get_platform_stats(s, testbed: Testbed):\n",
-    "    submitable_results = [coCLgenResult, cl_launcherCLgenResult, CLgenResult]\n",
+    "    clgen_submitted = s.query(sql.sql.func.count(CLgenMeta.submitted))\\\n",
+    "        .join(CLgenResult).filter(CLgenResult.testbed_id == testbed.id).scalar() or 0\n",
+    "    submitable_results = [coCLgenResult, cl_launcherCLgenResult]\n",
     "    def get_submitted(table):\n",
     "        \"\"\" submitted, non-duplicate bugs \"\"\"\n",
     "        return s.query(table)\\\n",
@@ -1230,7 +1232,7 @@
     "\n",
     "    return (\n",
     "        clgen_time + reduction_time + other_runtimes,\n",
-    "        sum(get_submitted(table) for table in submitable_results),\n",
+    "        clgen_submitted + sum(get_submitted(table) for table in submitable_results),\n",
     "    )\n",
     "\n",
     "\n",
@@ -1273,7 +1275,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "%run mkmegatable.ipy"
@@ -1288,38 +1292,55 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "IndexError",
+     "evalue": "too many indices for array",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mIndexError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-28-432bfb8148de>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     42\u001b[0m     \u001b[0;32mreturn\u001b[0m \u001b[0mtable\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     43\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 44\u001b[0;31m \u001b[0mruntimes_table\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mget_runtimes\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m<ipython-input-28-432bfb8148de>\u001b[0m in \u001b[0;36mget_runtimes\u001b[0;34m()\u001b[0m\n\u001b[1;32m     37\u001b[0m         \u001b[0;34m[\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"Reduction\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mx\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"CLSmith\"\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mx\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mclsmith_times\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;32mif\u001b[0m \u001b[0mx\u001b[0m \u001b[0;34m>\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m+\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     38\u001b[0m         \u001b[0;34m[\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"Execution\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mx\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"CLgen\"\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mx\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mclgen_times\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;32mif\u001b[0m \u001b[0mx\u001b[0m \u001b[0;34m<\u001b[0m \u001b[0mTIMEOUT\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m+\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 39\u001b[0;31m         \u001b[0;34m[\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"Generation\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mx\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"CLgen\"\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mx\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mclgen_times\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;32mif\u001b[0m \u001b[0mx\u001b[0m \u001b[0;34m<\u001b[0m \u001b[0mTIMEOUT\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m+\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     40\u001b[0m         [(\"Reduction\", x, \"CLgen\") for x in clgen_times[:,2] if x > 0])\n\u001b[1;32m     41\u001b[0m     \u001b[0mtable\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpd\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mDataFrame\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtable\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcolumns\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m\"Name\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"Runtime (s)\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"Source\"\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mIndexError\u001b[0m: too many indices for array"
+     ]
+    }
+   ],
    "source": [
     "clgen_generation_time = .9\n",
     "\n",
     "def get_runtimes():\n",
     "    TIMEOUT = 60\n",
-    "    \n",
+    "\n",
     "    with Session(commit=False) as s:\n",
     "        # CLSmith times\n",
     "        q = s.query(\n",
     "                CLSmithResult.runtime, \n",
     "                CLSmithProgram.runtime, \n",
     "                sql.sql.func.ifnull(CLSmithReduction.runtime, 0))\\\n",
-    "            .outerjoin(CLSmithProgram)\\\n",
+    "            .join(CLSmithMeta)\\\n",
+    "            .join(CLSmithProgram)\\\n",
     "            .outerjoin(CLSmithReduction)\\\n",
-    "            .filter(CLSmithResult.classification != None)\n",
+    "            .filter(CLSmithResult.classification != None,\n",
+    "                    CLSmithMeta.cumtime < TIME_LIMIT)\n",
     "        clsmith_times = np.array([row for row in q])\n",
+    "\n",
     "\n",
     "        # CLgen times\n",
     "        q = s.query(\n",
     "                CLgenResult.runtime,\n",
     "                CLgenProgram.runtime + CLgenHarness.generation_time,\n",
     "                sql.sql.func.ifnull(CLgenReduction.runtime, 0))\\\n",
-    "            .outerjoin(CLgenProgram)\\\n",
-    "            .outerjoin(CLgenHarness)\\\n",
+    "            .join(CLgenMeta)\\\n",
+    "            .join(CLgenProgram)\\\n",
+    "            .join(CLgenHarness)\\\n",
     "            .outerjoin(CLgenReduction)\\\n",
-    "            .filter(CLgenResult.classification != None)\n",
+    "            .filter(CLgenResult.classification != None,\n",
+    "                    CLSmithMeta.cumtime < TIME_LIMIT)\n",
     "        clgen_times = np.array([row for row in q])\n",
+    "\n",
     "\n",
     "    table = (\n",
     "        [(\"Execution\", x, \"CLSmith\") for x in clsmith_times[:,0] if x < TIMEOUT] +\n",
@@ -1389,7 +1410,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def get_kernel_sizes():    \n",
@@ -1425,7 +1448,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def plot_kernel_sizes(table, *args, **kwargs):\n",
