--- a/sec/bugs.tex
+++ b/sec/bugs.tex
@@ -8,7 +8,6 @@ We found numerous cases where kernels trigger a crash in the compiler (and as a 
 
 In the majority of cases, we found compiler crashes to be insensitive to OpenCL optimization setting.
 
-Our testing revealed bugs in relatively benign and stable parts of mature compilers, such as Figure~\ref{lst:oclgrind-llvm-densemap-assertion}, which exposes a bug in LLVM's hash map implementation.
 
 \paragraph{Front-end} We found the most bugs in compiler frontends. Because of the large volume of ill-formed test cases, our approach is biased towards discovering bugs in the early stages of compilation: lexing and parsing.
 
@@ -22,11 +21,16 @@ Parsers were a common source of errors. To date we have identified over 60 cases
 
 Occasionally, the cause of the crash is unclear, as in Figures~\ref{lst:nvidia-recursion-segfault} and~\ref{lst:nvidia-compile-segfault} which segfault the compiler without warning. We found the two commercial vendors NVIDIA and Intel were the most likely to fail silently.
 
+A bug in \texttt{clang::sema} has been forwarded to the LLVM folks.
+
 \input{lst/compiler-crash-bugs}
 
 \subsection{Runtime Crashes}
 
 Figure~\ref{lst:pocl-undefined-symbols} exposes a bug in in which a kernel containing an undefined symbol will successfully compile without warning, then crash the program when attempting to run the kernel. Such a test case is trivial to generate, yet could not be synthesized by CSmith.
+
+Figure~\ref{lst:oclgrind-llvm-densemap-assertion} exposed a race condition in switch statement handling. After reporting to developers, this been fixed.
+% https://github.com/jrprice/Oclgrind/commit/23eeaa602d63b7cbec286864c4180252dcde861e
 
 \input{lst/runtime-crash-bugs}
 
