--- a/difftest/Bug Reports.ipynb
+++ b/difftest/Bug Reports.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -11,7 +11,7 @@
        "'mysql://cc1:3306/project_b'"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -32,6 +32,17 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "TIME_LIMIT = 24 * 3600"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -49,16 +60,16 @@
     "def comment(*msg, prefix=''):\n",
     "    return '\\n'.join(f'// {prefix}{line}' for line in \" \".join(msg).strip().split('\\n'))\n",
     "\n",
-    "def get_bug_report(result_id: int, table=CLgenResult, report_type: str=\"bf\"):\n",
+    "def get_bug_report(session: session_t, tables: Tableset, result_id: int, report_type: str=\"bf\"):\n",
     "    with Session(commit=False) as s:\n",
-    "        result = s.query(table).filter(table.id == result_id).first()\n",
+    "        result = s.query(tables.results).filter(tables.results.id == result_id).first()\n",
     "\n",
     "        if not result:\n",
     "            raise KeyError(f\"no result with ID {result_id}\")\n",
     "\n",
     "        # generate bug report\n",
     "        now = datetime.datetime.utcnow().isoformat()\n",
-    "        report_id = crypto.md5_str(table.__name__) + \"-\" + str(result.id)\n",
+    "        report_id = crypto.md5_str(tables.name) + \"-\" + str(result.id)\n",
     "        bug_type = {\n",
     "            \"bf\": \"compilation failure\",\n",
     "            \"bc\": \"compiler crash\",\n",
@@ -76,26 +87,31 @@
     "//   OpenCL version:         {result.testbed.opencl}\n",
     "//   Host operating system:  {result.testbed.host}\n",
     "//   OpenCL optimizations:   {result.params.optimizations_on_off}\n",
-    "//\n",
     "\"\"\"\n",
-    "        if bug_type == \"bc\":\n",
+    "        if report_type == \"bc\":\n",
     "            result_output = comment(result.stderr, prefix='  ')\n",
     "            header += f\"\"\"\\\n",
+    "//\n",
     "// Output:\n",
     "{result_output}\n",
     "//   [Return code {result.status}]\n",
     "//\n",
     "\"\"\"    \n",
-    "        elif bug_type == \"w\":\n",
+    "        elif report_type == \"w\":\n",
+    "            stderr = comment(result.stderr, prefix='  ')\n",
     "            result_output = comment(result.stdout, prefix='  ')\n",
-    "            majority_output = analyze.get_majority_output(result)\n",
+    "            majority_output = analyze.get_majority_output(session, tables, result)\n",
     "            assert majority_output != result_output\n",
     "            header += f\"\"\"\\\n",
+    "//\n",
     "// Output:\n",
     "{result_output}\n",
     "//\n",
     "// Expected output:\n",
     "{majority_output}\n",
+    "//\n",
+    "// stderr:\n",
+    "{stderr}\n",
     "//\n",
     "\"\"\"\n",
     "            \n",
@@ -170,8 +186,10 @@
     "        outpath = fs.path(outbox, f\"bug-report-{vendor}-{result.id}.c\")            \n",
     "\n",
     "        report = get_bug_report(**{\n",
+    "            \"session\": s,\n",
+    "            \"tables\": { \"results\": coCLgenResult },\n",
     "            \"result_id\": result.id,\n",
-    "            \"table\": coCLgenResult,\n",
+    "            \"report_type\": \"bf\",\n",
     "        })\n",
     "\n",
     "        with open(outpath, \"w\") as outfile:\n",
@@ -192,11 +210,12 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
-    "TABLE_NAME = \"CLgen\"\n",
-    "TABLE = CLgenResult"
+    "tables = CLGEN_TABLES"
    ]
   },
   {
@@ -1141,11 +1160,11 @@
     "outbox = fs.path(\"outbox\", f\"{TABLE_NAME}Results\", \"bc\")\n",
     "fs.mkdir(outbox)\n",
     "with Session(commit=False) as s:\n",
-    "    q = s.query(TABLE)\\\n",
-    "        .filter(TABLE.outcome == \"bc\",\n",
-    "                sql.or_(TABLE.submitted == None, TABLE.submitted == 0),\n",
-    "                sql.or_(TABLE.dupe == None, TABLE.dupe == 0))\\\n",
-    "        .order_by(TABLE.id)\n",
+    "    q = s.query(tables.results)\\\n",
+    "        .filter(tables.results.outcome == \"bc\",\n",
+    "                sql.or_(tables.results.submitted == None, tables.results.submitted == 0),\n",
+    "                sql.or_(tables.results.dupe == None, tables.results.dupe == 0))\\\n",
+    "        .order_by(tables.results.id)\n",
     "\n",
     "    dupes = 0\n",
     "    errs = set()\n",
@@ -1162,8 +1181,9 @@
     "        outpath = fs.path(outbox, f\"bug-report-{vendor}-{result.id}.c\")            \n",
     "\n",
     "        report = get_bug_report(**{\n",
+    "            \"session\": s,\n",
+    "            \"tables\": tables,\n",
     "            \"result_id\": result.id,\n",
-    "            \"table\": TABLE,\n",
     "            \"report_type\": \"bc\",\n",
     "        })\n",
     "\n",
@@ -1184,92 +1204,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "# TABLE_NAME = \"CLgen\"\n",
-    "# TABLE = CLgenResult\n",
-    "TABLE_NAME = \"CLSmith\"\n",
-    "TABLE = CLSmithResult"
+    "tables = CLGEN_TABLES"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "outbox/CLSmithResults/w/bug-report-nvidia-4321.c\n",
-      "outbox/CLSmithResults/w/bug-report-nvidia-5929.c\n",
-      "outbox/CLSmithResults/w/bug-report-nvidia-7825.c\n",
-      "outbox/CLSmithResults/w/bug-report-nvidia-11110.c\n",
-      "outbox/CLSmithResults/w/bug-report-nvidia-11416.c\n",
-      "outbox/CLSmithResults/w/bug-report-nvidia-14161.c\n",
-      "outbox/CLSmithResults/w/bug-report-nvidia-15622.c\n",
-      "outbox/CLSmithResults/w/bug-report-nvidia-17939.c\n",
-      "outbox/CLSmithResults/w/bug-report-oclgrind-83628.c\n",
-      "outbox/CLSmithResults/w/bug-report-oclgrind-239179.c\n",
-      "outbox/CLSmithResults/w/bug-report-pocl-247202.c\n",
-      "outbox/CLSmithResults/w/bug-report-pocl-247794.c\n",
-      "outbox/CLSmithResults/w/bug-report-pocl-249112.c\n",
-      "outbox/CLSmithResults/w/bug-report-pocl-249657.c\n",
-      "outbox/CLSmithResults/w/bug-report-pocl-253650.c\n",
-      "outbox/CLSmithResults/w/bug-report-pocl-256540.c\n",
-      "outbox/CLSmithResults/w/bug-report-pocl-257207.c\n",
-      "outbox/CLSmithResults/w/bug-report-pocl-262194.c\n",
-      "outbox/CLSmithResults/w/bug-report-pocl-262420.c\n",
-      "outbox/CLSmithResults/w/bug-report-pocl-267375.c\n",
-      "outbox/CLSmithResults/w/bug-report-pocl-268828.c\n",
-      "outbox/CLSmithResults/w/bug-report-pocl-271978.c\n",
-      "outbox/CLSmithResults/w/bug-report-pocl-275571.c\n",
-      "outbox/CLSmithResults/w/bug-report-pocl-282009.c\n",
-      "outbox/CLSmithResults/w/bug-report-intel-362654.c\n",
-      "outbox/CLSmithResults/w/bug-report-intel-369257.c\n",
-      "outbox/CLSmithResults/w/bug-report-intel-374426.c\n",
-      "outbox/CLSmithResults/w/bug-report-intel-377644.c\n",
-      "outbox/CLSmithResults/w/bug-report-intel-382537.c\n",
-      "outbox/CLSmithResults/w/bug-report-intel-386657.c\n",
-      "outbox/CLSmithResults/w/bug-report-intel-387779.c\n",
-      "outbox/CLSmithResults/w/bug-report-intel-405868.c\n",
-      "outbox/CLSmithResults/w/bug-report-intel-406428.c\n",
-      "outbox/CLSmithResults/w/bug-report-intel-429696.c\n",
-      "outbox/CLSmithResults/w/bug-report-nvidia-434666.c\n",
-      "outbox/CLSmithResults/w/bug-report-nvidia-435147.c\n",
-      "outbox/CLSmithResults/w/bug-report-intel-436811.c\n",
-      "outbox/CLSmithResults/w/bug-report-nvidia-447426.c\n",
-      "outbox/CLSmithResults/w/bug-report-intel-449598.c\n",
-      "outbox/CLSmithResults/w/bug-report-intel-469532.c\n",
-      "outbox/CLSmithResults/w/bug-report-codeplay-478848.c\n",
-      "outbox/CLSmithResults/w/bug-report-codeplay-479608.c\n",
-      "outbox/CLSmithResults/w/bug-report-codeplay-480337.c\n",
-      "outbox/CLSmithResults/w/bug-report-codeplay-486977.c\n",
-      "outbox/CLSmithResults/w/bug-report-codeplay-487127.c\n",
-      "outbox/CLSmithResults/w/bug-report-codeplay-487476.c\n",
-      "outbox/CLSmithResults/w/bug-report-intel-497034.c\n",
-      "outbox/CLSmithResults/w/bug-report-codeplay-503952.c\n",
-      "outbox/CLSmithResults/w/bug-report-codeplay-509326.c\n",
-      "done\n",
-      "24 duplicates flagged\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "outbox = fs.path(\"outbox\", f\"{TABLE_NAME}Results\", \"w\")\n",
+    "outbox = fs.path(\"outbox\", tables.name, \"w\")\n",
     "fs.mkdir(outbox)\n",
     "with Session(commit=False) as s:\n",
-    "    q = s.query(TABLE)\\\n",
-    "        .filter(TABLE.classification == \"w\")\\\n",
-    "        .order_by(TABLE.id)\n",
+    "    q = s.query(tables.results)\\\n",
+    "        .join(tables.meta)\\\n",
+    "        .filter(tables.results.classification == \"w\",\n",
+    "                tables.meta.cumtime < TIME_LIMIT)\\\n",
+    "        .order_by(tables.results.id)\n",
     "\n",
     "    dupes = 0\n",
     "    errs = set()\n",
     "    for result in q:\n",
+    "        # FIXME: temp hacks until re-analyzed\n",
+    "        if tables.name == \"CLgen\":\n",
+    "            if not result.program.gpuverified:\n",
+    "                continue\n",
+    "            if \"float\" in result.program.src:\n",
+    "                continue\n",
+    "            if \"warning\" in result.stderr:\n",
+    "                continue\n",
+    "        \n",
     "        key = result.testbed_id, result.program_id\n",
     "\n",
     "        if key in errs:\n",
@@ -1279,11 +1249,12 @@
     "        errs.add(key)\n",
     "\n",
     "        vendor = vendor_str(result.testbed.platform)\n",
-    "        outpath = fs.path(outbox, f\"bug-report-{vendor}-{result.id}.c\")            \n",
-    "\n",
+    "        outpath = fs.path(outbox, f\"bug-report-{vendor}-{result.id}.c\")\n",
+    "        \n",
     "        report = get_bug_report(**{\n",
+    "            \"session\": s,\n",
+    "            \"tables\": tables,\n",
     "            \"result_id\": result.id,\n",
-    "            \"table\": TABLE,\n",
     "            \"report_type\": \"w\",\n",
     "        })\n",
     "\n",
